--- a/sheet.css
+++ b/sheet.css
@@ -124,11 +124,29 @@ textarea:focus {
   border:1px solid #e6983f;
 }
 
-canvas {
-  border: 1px solid #000;
-  background-color: #4f4f4f;
-  width: calc(100% - 10px);
-  margin-left: 10px;
-  margin-right: 0px;
-  opacity: 50%;
+.playbutton {
+  color: #000000;
+  background-color: #e6983f;
+  box-shadow: none;
+  border: 0;
+  border-radius: 0px;
+  padding: 5px;
+  opacity:0.8;
+  width: 127px;
+  margin-left:6px;
+  margin-bottom:20px;
+  margin-top:12px
 }
+
+.playbutton:disabled {
+  opacity:0.3
+}
+
+.playbutton[disabled]:hover {
+  opacity:0.3
+}
+
+.playbutton:hover {
+  opacity: 1
+}
+
