--- a/sheet.css
+++ b/sheet.css
@@ -168,3 +168,39 @@ textarea:focus {
   opacity: 1
 }
 
+
+
+.body-container {
+  display: flex;
+}
+
+.column {
+  border: 0px; 
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+.fixed-width {
+  width: 528px; /* Adjust as needed */
+  flex-shrink: 0; /* Prevents the column from shrinking */
+  position : relative;
+  left:5px;
+  margin-right: 10px;
+}
+
+.content-width {
+  white-space: nowrap; /* Prevents content from wrapping */
+}
+
+.remaining-width {
+  flex-grow: 1; /* Takes up the remaining space */
+  justify-content: center; /* Center horizontally */
+  align-items: top; 
+  height: 540px; /* Set a height for the element */
+}
+
+.mermid-container {
+  border:0px;
+  padding:0px;
+  max-height: 540;
+}
